<resources>
    <string name="graph89">Graph89</string>
    <string name="no_compatible_files_found">No compatible files found in this directory</string>
    <string name="filename">filename</string>
    <string name="install_selected_items">Install Selected Items</string>
    <string name="rom_file">ROM File:</string>
    <string name="browse">Browse</string>
    <string name="location">Location</string>
    <string name="calculator_type">Calculator Type:</string>
    <string name="rom_title">ROM Title:</string>
    <string name="auto_start_options">Autostart Options</string>
    <string name="if_graph89_is_started_while_the_phone_is_being_held_in">If Graph89 is started while the phone is being held in:</string>
    <string name="portrait_mode_start">Portrait Mode, Start:</string>
    <string name="landscape_mode_start">Landscape Mode, Start:</string>
    <string name="add_rom">Add ROM</string>
    <string name="no_roms_are_installed_click_add_rom_to_install_at_least_one">No ROMs are installed\n\nClick \'Add ROM\' to install at least one\n\nAccepted File Formats:\n *.rom, *.89u, *.tib</string>
    <string name="location_at">Location:</string>
    <string name="text_view">TextView</string>
    <string name="file_at">File:</string>
    <string name="key_press_feedback">Keypress Feedback</string>
    <string name="haptic_feedback">Haptic Feedback</string>
    <string name="acoustic_feedback">Acoustic Feedback</string>
    <string name="display_settings">Display Settings</string>
    <string name="zoom_mode">Zoom Mode</string>
    <string name="screen_scale">Screen Scale</string>
    <string name="lcd_type">LCD Type</string>
    <string name="enable_grayscale">Enable Grayscale</string>
    <string name="skin">Skin</string>
    <string name="orientation">Orientation</string>
    <string name="off_pixel_color">OFF Pixel Color</string>
    <string name="on_pixel_color">ON Pixel Color</string>
    <string name="lcd_grid_color">LCD Grid Color</string>
    <string name="lcd_background_color">LCD Background Color</string>
    <string name="emulation_settings">Emulation Settings</string>
    <string name="auto_off">Auto Off</string>
    <string name="exit_on_screen_off">Exit on Screen Off</string>
    <string name="save_state_on_exit">Save State on exit</string>
    <string name="cpu_speed">CPU Speed</string>
    <string name="overclock_when_busy">Overclock when Busy</string>
    <string name="energy_save">Energy Save</string>
    <string name="delete_rom">delete ROM</string>
    <string name="graph89_icon">graph89 Icon</string>
    <string name="file_picker">FilePicker</string>
</resources>