<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/take_screenshot_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginEnd="@dimen/padding_large"
            android:text="@string/location_at" />

        <TextView
            android:id="@+id/take_screenshot_readonly_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_large"
            android:layout_weight="1"
            android:text="@string/text_view" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginEnd="@dimen/padding_large"
            android:text="@string/file_at" />

        <EditText
            android:id="@+id/take_screenshot_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            tools:ignore="Autofill,LabelFor">

            <requestFocus />
        </EditText>
    </TableRow>

</TableLayout>