<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/emulator_main_controlbar"
        layout="@layout/controlbar"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:visibility="gone"
        android:layout_margin="5dp">
               
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/auto_start_options"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
       <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/if_graph89_is_started_while_the_phone_is_being_held_in"
                android:layout_weight = "1"/>
        </LinearLayout>
       
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/portrait_mode_start"
                android:layout_weight = "1"/>

            <Spinner
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" 
                android:layout_weight = "1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight = "1"
                android:text="@string/landscape_mode_start" />

            <Spinner
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" 
                android:layout_weight = "1"/>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="#006099"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <Button
        android:id="@+id/rom_manager_main_add_rom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/add_rom" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:scaleType="fitXY"
        app:srcCompat="@android:drawable/divider_horizontal_dark"
        tools:ignore="ContentDescription" />

    <ListView
        android:id="@+id/rom_manager_main_rom_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="visible" >
    </ListView>

    <TextView
        android:id="@+id/rom_manager_main_norommessage"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginTop="50dip"
        android:text="@string/no_roms_are_installed_click_add_rom_to_install_at_least_one"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="italic"
        android:visibility="gone" />

</LinearLayout>